@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-04-03:
+
+- Fixed multiple crashing bugs in discipline functions invoked from non-forked
+  subshells, including corruption of the $_ variable.
+
 2023-04-02:
 
 - Corrected the 2022-07-05 fix for the detection of a syntax error in
